Update .gitignore, requirements, and VSCode settings
- Added various file patterns to .gitignore for better exclusion management.
- Updated requirements.txt to include pandas, statsmodels, and matplotlib.
- Modified VSCode settings to adjust font size and change the color theme to Dracula Pro.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 node_modules
 .tmp
 npm-debug.log
+.ipynb_checkpoints
+video*
+README.pdf
+other*
+__pycache__
+.DS_Store
+archive*
+utils.py
+1*.ipynb
+.solutions
+.vscode
+archive
+*.csv
+*.parquet
+*.xlsx
