Update environment configuration and clean up project files
- Updated PYTHONPATH in .env file for consistency across environments.
- Enhanced .gitignore to include additional notebook exclusions for better project organization.
- Deleted multiple unused Jupyter notebooks to streamline the project structure, including those related to validation and modeling.
- Adjusted font size in .vscode settings for improved readability.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,5 +62,8 @@
 	"onCreateCommand": "echo PS1='\"$ \"' >> ~/.bashrc",
 	// Pull all branches
 	"postAttachCommand": "git pull --all",
-	"postCreateCommand": "sh .devcontainer/startup.sh"
+	"postCreateCommand": "sh .devcontainer/startup.sh",
+	"containerEnv": {
+		"PYTHONPATH": "/workspaces/python-for-time-series-forecasting-5246009"
+	}
 }
