--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-PYTHONPATH="/Users/sota/Library/CloudStorage/Dropbox-datons/Business/1 Projects/LiL Time Series/2 materials github/python-for-time-series-forecasting-5246009"
-# PYTHONPATH="/workspaces/python-for-time-series-forecasting-5246009"
+PYTHONPATH="/workspaces/python-for-time-series-forecasting-5246009"
