Add AirPassengers dataset and its log transformation in parquet format
- Introduced `AirPassengers.parquet` containing monthly airline passenger numbers from 1949 to 1960.
- Added `AirPassengers_log.parquet` for the log transformation of the passenger data.
- Both datasets are stored in parquet format for efficient storage and retrieval.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,17 @@ archive
 *.parquet
 *.xlsx
 
+# Exception: Allow specific data files needed by notebooks
+!data/EIA/demand_cal_historical_datetime-split.csv
+!data/EIA/fuel_type_data_california.parquet
+!data/FRED/CORESTICKM159SFRBATL.csv
+!data/FRED/CORESTICKM159SFRBATL.xlsx
+!data/FRED/FRED_joined.parquet
+!data/UCIrvine/ElectricityLoadDiagrams20112014.parquet
+!data/fred/HOUSTNSA.csv
+!data/statsmodels/AirPassengers.parquet
+!data/statsmodels/AirPassengers_log.parquet
+
 docs
 
 .vscode
@@ -32,3 +43,5 @@ notebooks_sketch/
 
 !modules/utils.py
 notebooks/**/E_*.ipynb
+find_data_paths.py
+analyze_data_files.py
